SERVER-21534 do not assume that setStreamNonBlocking will always succeed